# PointCloud_Segmentation

./: CMakeLists.txt  README.md  package.xml
launch/: turtlebot3_small_room.launch
models/Objects_to_identify/: model.config  model.sdf
models/turtlebot_small_room/: model.config  model.sdf
src/: pose_write_node.py  segment.py
worlds/: turtlebot3_small_room.world
